quality changes